k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: monte-et-souris
  labels:
    app: monte-et-souris
spec:
  type: ClusterIP
  selector:
    app: monte-et-souris
  ports:
    - name: http
      port: 80
      targetPort: http
